tests/purs/passing/ModuleAndQualifierNames/Module2.purs
module Qual0123456789ifier.Module2 where
