tests/purs/failing/DiffKindsSameName/LibA.purs
module DiffKindsSameName.LibA where

data DemoKind

